@@ -58,6 +58,8 @@
 	updated faq
 	fixed a bug where binding an oracle cursor didn't reset some values
 		and would cause subsequent cursor binds to fail
+	added note to docs about configuring sybase to dump transactions at
+		each checkpoint
 
 0.41 - added configure test for ruby.h
 	added a couple of new functions to the mysql drop-in library
